# chatbot-demo

./: .gitignore  .secrets.baseline  Dockerfile  README.md  example.env  pyproject.toml  requirements.txt
.ebextensions/: 001_disk.config  002_fastapi.config  docker-storage.config
.github/workflows/: secret-scan.yml
chatbot/: app.py  config.py
chatbot/db/: migrate.py  scylla_loader.py  scylladb.py
chatbot/movie_rag/: llm_provider.py  models.py  movie_rag.py
chatbot/static/: app.js
chatbot/templates/: index.html
chatbot/templates/partials/: bot_message.html
