[project]
name = "chatbot-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "groq>=1.0.0",
    "scylla-driver>=3.29.7",
    "sentence-transformers>=5.2.0",
]

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
]
